# TTT4120

./: pyproject.toml
A1/: 1.py  2.py  4.py  5.py
A10/: 1.py  1_clean.py  2.py  3.py
A11/: 1.py  2a.py  2b.py  2c.py  2d.py  3.py  3b.py  3c.py
A2/: 1.py  1e.py  3.py  4.py  coefficients.py  geometric_series.py
A4/: 3b.py  3c.py  4.py
A5/: 1.py  2a.py  2b.py  2c.py  2d.py  3c.py  3d.py  3e.py  3f.py  3g.py  3h.py
A6/: 1a.py  1b.py  1c.py  1d.py  1e.py  2a.py  2b.py  3a.py  3b.py  3b_interactive.py  3c.py  3c_interactrive.py  4a.py
A7/: 1a.py  1c.py  2.py  3.py
A8/: 1.py  2_summary.py  2c.py  2d.py  3.py  print_vowels.py  test_mic.py
A9/: 1.py  2.py  3b.py  3c.py  3d.py  3e.py  4a.py
