[project]
name = "digsig"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pyqt5>=5.15.11",
    "pyside6>=6.10.0",
    "pysptk>=1.0.1",
    "scipy>=1.16.1",
    "setuptools>=80.9.0",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
]
